[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Fonts/PixelFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Exit Menu/YES button.png" type="Texture" id=2]
[ext_resource path="res://Assets/Exit Menu/YES button hover.png" type="Texture" id=3]
[ext_resource path="res://Assets/Exit Menu/lost_menu_no_text.png" type="Texture" id=4]
[ext_resource path="res://Assets/Exit Menu/NO button.png" type="Texture" id=5]
[ext_resource path="res://Assets/Exit Menu/NO button hover.png" type="Texture" id=6]
[ext_resource path="res://Scripts/ExitMenu.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[node name="ExitMenu" type="Control"]
margin_right = 2560.0
margin_bottom = 1504.0
rect_pivot_offset = Vector2( -672, -512 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlurredBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.388235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBackground" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -485.0
margin_top = -315.0
margin_right = 485.0
margin_bottom = 315.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MenuBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -438.0
margin_top = -129.5
margin_right = 438.0
margin_bottom = -78.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "DO YOU WANT TO EXIT THE GAME?"
align = 1

[node name="YesButton" type="TextureButton" parent="MenuBackground"]
margin_left = 549.0
margin_top = 339.0
margin_right = 849.0
margin_bottom = 449.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="NoButton" type="TextureButton" parent="MenuBackground"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 125.0
margin_top = -291.0
margin_right = 425.0
margin_bottom = -181.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
